--- a/NBAManagmentSystem/MainWindow.xaml
+++ b/NBAManagmentSystem/MainWindow.xaml
@@ -8,9 +8,23 @@
         Title="NBA Managment System" Height="600" Width="800" ResizeMode="NoResize">
 
     <Grid>
-        <StackPanel>
-            <Frame Name="FramePage" Height="550" NavigationUIVisibility="Hidden"></Frame>
-            <TextBlock Background="#1974D2" Foreground="White" Height="25" TextAlignment="Center" Margin="0,-10,0,0"><Run Text="The current season is 2016-2017, and NBA already has a history of 71 years."/></TextBlock>
-        </StackPanel>
+        <Grid Name="StandartGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition x:Name="GridCap" Height="69*"></RowDefinition>
+                <RowDefinition x:Name="GridStand" Height="479*"></RowDefinition>
+                <RowDefinition Height="23*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Border BorderThickness="0,0,0,1" BorderBrush="#1974D2"/>
+            <StackPanel x:Name="StackCap" Grid.Row="0" Orientation="Horizontal" Height=" 70" VerticalAlignment="Top" Grid.RowSpan="2" Panel.ZIndex="5">
+                <Image Source="Resources/logo.jpg" Stretch="Fill" Width="30" Height="60" Margin="5,0"/>
+                <TextBlock Height="20" VerticalAlignment="Bottom" Margin="10"><Run Text="NBA Managment System" /></TextBlock>
+                
+                <Button Style="{StaticResource BackBut}" Template="{StaticResource backButton}" Height="25" Margin="480,0,0,10" VerticalAlignment="Bottom" Click="BackPageClick">
+                    <TextBlock Style="{StaticResource ButText}" Foreground="Black" FontWeight="DemiBold" Margin="13,0">Back</TextBlock>
+                </Button>
+            </StackPanel>
+            <Frame Grid.Row="1" Name="FramePage" Height="550" NavigationUIVisibility="Hidden"></Frame>
+            <TextBlock Grid.Row="2" Background="#1974D2" Foreground="White" TextAlignment="Center" Margin="0,0,0,-2"><Run Text="The current season is 2016-2017, and NBA already has a history of 71 years."/></TextBlock>
+        </Grid>
     </Grid>
 </Window>
