--- a/NBAManagmentSystem/MainWindow.xaml
+++ b/NBAManagmentSystem/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NBAManagmentSystem"
         mc:Ignorable="d"
-        Title="NBA Managment System" Height="610" Width="800" ResizeMode="NoResize">
+        Title="NBA Managment System" Height="610" Width="800" ResizeMode="NoResize" WindowStyle="SingleBorderWindow" Icon="Resources/logo.jpg">
 
     <Grid>
         <Grid Name="StandartGrid">
